# Online_courses

./: .coveragerc  .env.sample  .flake8  Dockerfile  README.md  celerybeat-schedule.bak  docker-compose.yml  groups.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
education/: admin.py  models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
education/management/commands/: create_courses_and_lessons.py
education/migrations/: 0001_initial.py  0002_alter_lesson_video_link.py  0003_course_owner_lesson_owner.py  0004_alter_lesson_video_link.py
nginx/: Dockerfile  nginx.conf
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: create_payments.py  create_test_users.py  createadmin.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_payment_method.py  0004_alter_payment_options_subscription.py  0005_payment_link_payment_session_id.py  0006_alter_payment_user.py
